Fixed bug where navbar would be displayed behind home section

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,6 +6,8 @@ $sm-screen-width: 480px;
 $md-screen-width: 768px;
 $lg-screen-width: 1200px;
 
+$foreground-index: 999;
+
 #app {
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
